# cfac

./: .cvsignore  .gitignore  Make.conf  Make.conf.in  Make.lib  Makefile  Makefile.in  README  README.md  cfac_schema.sql  cfac_schema_v2.sql  cfacdb.c  cfacdb.h  cfacdbP.h  cfacdb_f.c  cfacdbu.c  configure.ac  fdemo.f  rates.c  setup.py  sql2cstr.sh  version.h
.github/workflows/: deploy-site.yml  make-win.yml  make.yml
ac-tools/: Make.conf.in  configure.ac  makerelease  sysdef.h.in
blas/: Make.defs  Makefile.in
cfacdb/: Make.conf  Makefile  README  cache.c  cache_schema.sql  cfac_schema.sql  cfac_schema_v1.sql  cfac_schema_v2.sql  cfac_schema_v3.sql  cfac_schema_v4.sql  cfacdb.c  cfacdb.h  cfacdbP.h  cfacdb_f.c  cfacdbu.c  fdemo.f  rates.c  sql2cstr.sh
cfacdb/xul/: .cvsignore  Makefile  chrome.manifest  install.rdf
cfacdb/xul/chrome/content/: cfacdb.js  cfacdb.xul  overlay.js
cfacdb/xul/keys/: keyfile.pub
cfacdb/xul/scripts/: makerelease.sh
coul/: CPC-LICENSE  Make.defs  besljn.f  clogam.f  cmultip.f  coulcc.f  coulrad.f  dcoul.f  f11.f  njsym.f
demo/: Make.common  Makefile  README
demo/aidr/: .cvsignore  Makefile  test.sf
demo/aidr/ref/: ai.asc  lev.asc  se.ai  se.lev
demo/aidrM/: Makefile  test.sf
demo/aidrM/ref/: aiM.asc  lev.asc
demo/aidrUTA/: Makefile  test.sf
demo/aidrUTA/ref/: ai.asc  lev.asc
demo/excitation/: .cvsignore  Makefile  test.sf
demo/excitation/ref/: ce.asc  lev.asc  ne.ce  ne.ceM  ne.lev
demo/excitationM/: .cvsignore  Makefile  test.sf
demo/excitationM/ref/: ceM.asc  lev.asc  ne.ceM  ne.lev
demo/excitationUTA/: test.sf
demo/excitationUTA/ref/: ce.asc  lev.asc
demo/ionization/: .cvsignore  Makefile  test.sf
demo/ionization/ref/: ci.asc  lev.asc  ne.ci  ne_f.lev
demo/ionizationUTA/: test.sf
demo/ionizationUTA/ref/: ci.asc  lev.asc
demo/pirr/: .cvsignore  Makefile  fe24_pirr.sf  test.sf
demo/pirr/ref/: lev.asc  li.lev  li.rr  rr.asc
demo/pirrUTA/: test.sf
demo/pirrUTA/ref/: lev.asc  rr.asc
demo/structure/: .cvsignore  Makefile  test.sf
demo/structure/ref/: lev.asc  ne.lev  ne.tr  tr.asc
demo/structureUTA/: test.sf
demo/structureUTA/ref/: lev.asc  tr.asc
doc/: .cvsignore  Makefile  cfacdb-doxy.cfg  cfacdb.tex  facref.bib  faq.tex  fformat.tex  gpl-3.0.tex  manual.tex  overview.tex  physics.tex  sfaclang.tex
doc/papers/: facref.bib  mcross.tex
faclib/: .cvsignore  Make.defs  Makefile  angular.c  angular.h  array.c  array.h  cf77.h  cfac.c  cfac_dummy.c  cfortran.h  cfp.c  cfp.h  config.c  config.h  consts.h  coulomb.c  coulomb.h  coulrad.c  coulrad.h  crm.c  dbase.c  dbase.h  dbase_sql.c  excitation.c  excitation.h  global.h  grid.c  grid.h  init.c  init.h  interpolation.c  interpolation.h  ionization.c  ionization.h  mbpt.c  mbpt.h  nucleus.c  nucleus.h  orbital.c  (+21 more)
include/: cfac.h  cfacP.h  cfacdb.h  cfacdbP.h
ionis/: Make.defs  Makefile  colfit.f  ionis.f  recomb.f
minpack/: Make.defs  enorm.f  lmder.f
mpfun/: Make.defs
ode/: Make.defs  intdy.f  lsode.f  stode.f
python/: .cvsignore  Makefile  fac.c  pcrm.c  ppol.c  util.c
sfac/: .cvsignore  Makefile  scrm.c  sfac.c  spol.c  stoken.c  stoken.h
site/: .gitignore  Gemfile  _config.yml  index.md
site/_layouts/: default.html
toms/: .cvsignore  Make.defs  rgbi3p.f  sdbi3p.f  tn.f  tripack.f  uvip3c.f  uvip3p.f
xul/: Makefile  install.rdf
xul/chrome/content/: cfacdb.js  cfacdb.xul  overlay.xul
